Try to fix header overflow

--- a/public/header.css
+++ b/public/header.css
@@ -1,4 +1,5 @@
 header {
+	overflow: hidden;
 	display: flex;
 	justify-content: space-between;
 	padding: 1.7rem;
